name:          vibra
version:       0.0.2
synopsis:      Library for a Chinese sex toy
description:   Implementation of bit-banging interface to Chinese sex toy
category:      Hardware
license:       GPL-3
license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@iki.fi
build-type:    Simple
cabal-version: >= 1.6
data-files:    index.html
data-dir:      data

library
  hs-source-dirs:  src
  exposed-modules: Ftdi
  build-depends:
    base >= 4 && < 5
  c-sources:      src/ftdi.c
  cc-options:     -std=gnu99
  pkgconfig-depends: libftdi

executable vibraserver
  hs-source-dirs:  src
  main-is:         Web.hs
  ghc-options:     -threaded
  c-sources:       src/ftdi.c
  cc-options:      -std=gnu99
  pkgconfig-depends: libftdi
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.9.2,
    http-types >= 0.6.9,
    text >= 0.11.1.13,
    transformers >= 0.2.2.0,
    wai >= 1.1.0.1,
    warp >= 1.1.0.1
